--- a/src/main/resources/com.gui/DepartmentList.fxml
+++ b/src/main/resources/com.gui/DepartmentList.fxml
@@ -25,6 +25,8 @@
             <columns>
                 <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="id" />
                 <TableColumn fx:id="tableColumnName" prefWidth="75.0" text="name" />
+            <TableColumn fx:id="tableColumnEDIT" prefWidth="75.0" />
+            <TableColumn fx:id="tableColumnREMOVE" prefWidth="75.0" />
             </columns>
         </TableView>
     </children>
